--- a/README
+++ b/README
@@ -3,23 +3,23 @@ gstreamer010-plugins-base
 A collection of plugins for the GStreamer media framework.
 
 Runtime requirements:
-  cygwin-1.5.24-2
+  cygwin-1.5.25-7
   alternatives-1.3.29a-1
-  glib2-2.12.13-1
-  gstreamer010-0.10.14-1
+  glib2-2.14.5-1
+  gstreamer010-0.10.16-1
   libintl8-0.15-1
   liboil03-0.3.11-2
 
 (cdparanoia)
   libcdio7-0.78.2-1
 (gnome_vfs)
-  gnome-vfs2-2.18.1-1
+  gnome-vfs2-2.20.1-1
 (libvisual)
   libvisual04-0.4.0-1
 (ogg)
   libogg0-1.1.3-1
 (pango)
-  pango-1.16.5-1
+  pango-1.18.4-1
 (theora)
   libtheora0-1.0beta2-1
 (vorbis)
@@ -31,12 +31,12 @@ Runtime requirements:
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.24-2
+  cygwin-1.5.25-7
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.3.6-1
-  gawk-3.1.5-4
+  cygport-0.3.7-1
+  gawk-3.1.6-1
   gcc-core-3.4.4-3
   gtk-doc-1.9-1
   libtool1.5-1.5.23a-2
@@ -55,24 +55,24 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer010-plugins-base-0.10.14-X-src.tar.bz2
+  unpack gstreamer010-plugins-base-0.10.16-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer010-plugins-base-0.10.14-X.cygport all
+  cygport ./gstreamer010-plugins-base-0.10.16-X.cygport all
 
 This will create:
-  /usr/src/gstreamer010-plugins-base-0.10.14-X-src.tar.bz2
-  /usr/src/gstreamer010-plugins-base-0.10.14-X.tar.bz2
-  /usr/src/gstreamer010-plugins-base-devel-0.10.14-X.tar.bz2
-  /usr/src/gstreamer010-plugins-cdparanoia-0.10.14-X.tar.bz2
-  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.14-X.tar.bz2
-  /usr/src/gstreamer010-plugins-libvisual-0.10.14-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ogg-0.10.14-X.tar.bz2
-  /usr/src/gstreamer010-plugins-pango-0.10.14-X.tar.bz2
-  /usr/src/gstreamer010-plugins-theora-0.10.14-X.tar.bz2
-  /usr/src/gstreamer010-plugins-vorbis-0.10.14-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ximage-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.16-X-src.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.16-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-devel-0.10.16-X.tar.bz2
+  /usr/src/gstreamer010-plugins-cdparanoia-0.10.16-X.tar.bz2
+  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.16-X.tar.bz2
+  /usr/src/gstreamer010-plugins-libvisual-0.10.16-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ogg-0.10.16-X.tar.bz2
+  /usr/src/gstreamer010-plugins-pango-0.10.16-X.tar.bz2
+  /usr/src/gstreamer010-plugins-theora-0.10.16-X.tar.bz2
+  /usr/src/gstreamer010-plugins-vorbis-0.10.16-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ximage-0.10.16-X.tar.bz2
 
 -------------------------------------------
 
@@ -83,11 +83,14 @@ Files included in the binary packages:
   /etc/preremove/gstreamer010-plugins-base.sh
   /usr/bin/cyggstaudio-0.10-0.dll
   /usr/bin/cyggstcdda-0.10-0.dll
+  /usr/bin/cyggstfft-0.10-0.dll
   /usr/bin/cyggstinterfaces-0.10-0.dll
   /usr/bin/cyggstnetbuffer-0.10-0.dll
   /usr/bin/cyggstpbutils-0.10-0.dll
   /usr/bin/cyggstriff-0.10-0.dll
   /usr/bin/cyggstrtp-0.10-0.dll
+  /usr/bin/cyggstrtsp-0.10-0.dll
+  /usr/bin/cyggstsdp-0.10-0.dll
   /usr/bin/cyggsttag-0.10-0.dll
   /usr/bin/cyggstvideo-0.10-0.dll
   /usr/bin/gst-visualise-0.10
@@ -105,7 +108,6 @@ Files included in the binary packages:
   /usr/lib/gstreamer-0.10/cyggstsubparse.dll
   /usr/lib/gstreamer-0.10/cyggsttcp.dll
   /usr/lib/gstreamer-0.10/cyggsttypefindfunctions.dll
-  /usr/lib/gstreamer-0.10/cyggsturidecodebin.dll
   /usr/lib/gstreamer-0.10/cyggstvideorate.dll
   /usr/lib/gstreamer-0.10/cyggstvideoscale.dll
   /usr/lib/gstreamer-0.10/cyggstvideotestsrc.dll
@@ -124,35 +126,41 @@ Files included in the binary packages:
   /usr/lib/gstreamer-0.10/libgstsubparse.la
   /usr/lib/gstreamer-0.10/libgsttcp.la
   /usr/lib/gstreamer-0.10/libgsttypefindfunctions.la
-  /usr/lib/gstreamer-0.10/libgsturidecodebin.la
   /usr/lib/gstreamer-0.10/libgstvideorate.la
   /usr/lib/gstreamer-0.10/libgstvideoscale.la
   /usr/lib/gstreamer-0.10/libgstvideotestsrc.la
   /usr/lib/gstreamer-0.10/libgstvolume.la
-  /usr/share/doc/Cygwin/gstreamer010-plugins-base-0.10.14.README
-  /usr/share/doc/gstreamer010-plugins-base-0.10.14/ABOUT-NLS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.14/AUTHORS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.14/COPYING
-  /usr/share/doc/gstreamer010-plugins-base-0.10.14/COPYING.LIB
-  /usr/share/doc/gstreamer010-plugins-base-0.10.14/ChangeLog
-  /usr/share/doc/gstreamer010-plugins-base-0.10.14/INSTALL
-  /usr/share/doc/gstreamer010-plugins-base-0.10.14/NEWS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.14/README
+  /usr/share/doc/gstreamer010-plugins-base-0.10.16/ABOUT-NLS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.16/AUTHORS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.16/COPYING
+  /usr/share/doc/gstreamer010-plugins-base-0.10.16/COPYING.LIB
+  /usr/share/doc/gstreamer010-plugins-base-0.10.16/ChangeLog
+  /usr/share/doc/gstreamer010-plugins-base-0.10.16/INSTALL
+  /usr/share/doc/gstreamer010-plugins-base-0.10.16/NEWS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.16/README
   /usr/share/locale/af/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/az/LC_MESSAGES/gst-plugins-base-0.10.mo
+  /usr/share/locale/bg/LC_MESSAGES/gst-plugins-base-0.10.mo
+  /usr/share/locale/ca/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/cs/LC_MESSAGES/gst-plugins-base-0.10.mo
+  /usr/share/locale/da/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/de/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/en_GB/LC_MESSAGES/gst-plugins-base-0.10.mo
+  /usr/share/locale/es/LC_MESSAGES/gst-plugins-base-0.10.mo
+  /usr/share/locale/fi/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/hu/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/it/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/nb/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/nl/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/or/LC_MESSAGES/gst-plugins-base-0.10.mo
+  /usr/share/locale/pl/LC_MESSAGES/gst-plugins-base-0.10.mo
+  /usr/share/locale/sk/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/sq/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/sr/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/sv/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/uk/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/vi/LC_MESSAGES/gst-plugins-base-0.10.mo
+  /usr/share/locale/zh_CN/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/man/man1/gst-visualise-0.10.1.gz
 
 (gstreamer010-plugins-cdparanoia)
@@ -200,6 +208,11 @@ Files included in the binary packages:
   /usr/include/gstreamer-0.10/gst/audio/multichannel-enumtypes.h
   /usr/include/gstreamer-0.10/gst/audio/multichannel.h
   /usr/include/gstreamer-0.10/gst/cdda/gstcddabasesrc.h
+  /usr/include/gstreamer-0.10/gst/fft/gstfft.h
+  /usr/include/gstreamer-0.10/gst/fft/gstfftf32.h
+  /usr/include/gstreamer-0.10/gst/fft/gstfftf64.h
+  /usr/include/gstreamer-0.10/gst/fft/gstffts16.h
+  /usr/include/gstreamer-0.10/gst/fft/gstffts32.h
   /usr/include/gstreamer-0.10/gst/floatcast/floatcast.h
   /usr/include/gstreamer-0.10/gst/interfaces/colorbalance.h
   /usr/include/gstreamer-0.10/gst/interfaces/colorbalancechannel.h
@@ -218,6 +231,7 @@ Files included in the binary packages:
   /usr/include/gstreamer-0.10/gst/pbutils/descriptions.h
   /usr/include/gstreamer-0.10/gst/pbutils/install-plugins.h
   /usr/include/gstreamer-0.10/gst/pbutils/missing-plugins.h
+  /usr/include/gstreamer-0.10/gst/pbutils/pbutils-enumtypes.h
   /usr/include/gstreamer-0.10/gst/pbutils/pbutils.h
   /usr/include/gstreamer-0.10/gst/riff/riff-ids.h
   /usr/include/gstreamer-0.10/gst/riff/riff-media.h
@@ -225,7 +239,21 @@ Files included in the binary packages:
   /usr/include/gstreamer-0.10/gst/rtp/gstbasertpaudiopayload.h
   /usr/include/gstreamer-0.10/gst/rtp/gstbasertpdepayload.h
   /usr/include/gstreamer-0.10/gst/rtp/gstbasertppayload.h
+  /usr/include/gstreamer-0.10/gst/rtp/gstrtcpbuffer.h
   /usr/include/gstreamer-0.10/gst/rtp/gstrtpbuffer.h
+  /usr/include/gstreamer-0.10/gst/rtp/gstrtppayloads.h
+  /usr/include/gstreamer-0.10/gst/rtsp/gstrtsp-enumtypes.h
+  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspbase64.h
+  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspconnection.h
+  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspdefs.h
+  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspextension.h
+  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspmessage.h
+  /usr/include/gstreamer-0.10/gst/rtsp/gstrtsprange.h
+  /usr/include/gstreamer-0.10/gst/rtsp/gstrtsptransport.h
+  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspurl.h
+  /usr/include/gstreamer-0.10/gst/sdp/gstsdp.h
+  /usr/include/gstreamer-0.10/gst/sdp/gstsdpmessage.h
+  /usr/include/gstreamer-0.10/gst/tag/gsttagdemux.h
   /usr/include/gstreamer-0.10/gst/tag/tag.h
   /usr/include/gstreamer-0.10/gst/video/gstvideofilter.h
   /usr/include/gstreamer-0.10/gst/video/gstvideosink.h
@@ -234,6 +262,8 @@ Files included in the binary packages:
   /usr/lib/libgstaudio-0.10.la
   /usr/lib/libgstcdda-0.10.dll.a
   /usr/lib/libgstcdda-0.10.la
+  /usr/lib/libgstfft-0.10.dll.a
+  /usr/lib/libgstfft-0.10.la
   /usr/lib/libgstinterfaces-0.10.dll.a
   /usr/lib/libgstinterfaces-0.10.la
   /usr/lib/libgstnetbuffer-0.10.dll.a
@@ -244,11 +274,28 @@ Files included in the binary packages:
   /usr/lib/libgstriff-0.10.la
   /usr/lib/libgstrtp-0.10.dll.a
   /usr/lib/libgstrtp-0.10.la
+  /usr/lib/libgstrtsp-0.10.dll.a
+  /usr/lib/libgstrtsp-0.10.la
+  /usr/lib/libgstsdp-0.10.dll.a
+  /usr/lib/libgstsdp-0.10.la
   /usr/lib/libgsttag-0.10.dll.a
   /usr/lib/libgsttag-0.10.la
   /usr/lib/libgstvideo-0.10.dll.a
   /usr/lib/libgstvideo-0.10.la
+  /usr/lib/pkgconfig/gstreamer-audio-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-cdda-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-fft-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-floatcast-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-interfaces-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-netbuffer-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-pbutils-0.10.pc
   /usr/lib/pkgconfig/gstreamer-plugins-base-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-riff-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-rtp-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-rtsp-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-sdp-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-tag-0.10.pc
+  /usr/lib/pkgconfig/gstreamer-video-0.10.pc
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/api-index.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/compiling.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-0.10.devhelp
@@ -267,6 +314,11 @@ Files included in the binary packages:
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstcddabasesrc.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstcolorbalance.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstcolorbalancechannel.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstfft.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstfftf32.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstfftf64.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstffts16.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstffts32.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstfloatcast.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmixer.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmixeroptions.html
@@ -281,8 +333,19 @@ Files included in the binary packages:
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpropertyprobe.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstriff.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstringbuffer.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtcpbuffer.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtpbuffer.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtppayloads.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspbase64.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspconnection.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspdefs.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspmessage.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtsprange.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtsptransport.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspurl.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstsdpmessage.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttag.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttagdemux.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttagid3.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttagvorbis.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttuner.html
@@ -296,6 +359,7 @@ Files included in the binary packages:
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-audio.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-base-utils.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-cdda.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-ffft.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-floatcast.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-interfaces.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-libs-hierarchy.html
@@ -303,6 +367,8 @@ Files included in the binary packages:
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-plugins-base.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-riff.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-rtp.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-rtsp.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-sdp.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-tag.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-video.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/home.png
@@ -315,6 +381,7 @@ Files included in the binary packages:
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/ch01.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/ch02.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-0.10.devhelp
+  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-0.10.devhelp2
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-adder.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-alsamixer.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-alsasink.html
@@ -388,6 +455,12 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 0.10.16-1 -----
+Version bump.
+
+----- version 0.10.15-1 -----
+Version bump.
 
 ----- version 0.10.14-1 -----
 Version bump.
